Improve main viewport CSS
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -40,7 +40,7 @@
             <div id="menu-main">
                 {% include 'appearance/menu_main.html' %}
             </div>
-            <div class="main">
+            <div id="appearance-main-viewport">
                 <div class="row zero-margin">
                     <div class="col-xs-12">
                         <div id="ajax-header"></div>
