--- a/mayan/apps/appearance/static/appearance/css/base.css
+++ b/mayan/apps/appearance/static/appearance/css/base.css
@@ -15,6 +15,10 @@
     font-family: "IM Fell English SC", serif;
 }
 
+#appearance-main-viewport {
+    margin-top: 60px;
+}
+
 #fancybox-left-ico {
  left: 20px;
 }
@@ -300,9 +304,6 @@ a i {
  * Main content
  */
 
-.main {
-}
-
 /* Remove scroll bar caused by bootstraps -15px on .row margins */
 .zero-margin {
     margin-right: 0;
@@ -316,7 +317,7 @@ a i {
 }
 
 @media (min-width: 768px) {
-    .main {
+    #appearance-main-viewport {
         padding-right: 0px;
         padding-left: 0px;
         margin-left: 210px;
@@ -334,7 +335,6 @@ a i {
 
 #viewport {
     height: 100%;
-    padding-top: 60px;
     width: 100%;
 }
 
@@ -514,7 +514,7 @@ a i {
     left: 0 !important;
 }
 
-.main .page-header {
+#appearance-main-viewport .page-header {
   margin-top: 0;
 }
 
