Optimize template `SourceColumn` retrieval
`SourceColumn` supports object type inspection, by passing the
queryset or an object list, doing the inspection for each object
is no longer necessary.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/generic_list_items_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_items_subtemplate.html
@@ -12,7 +12,13 @@
             </div>
         {% else %}
             {% include 'appearance/list_header.html' %}
+
             {% navigation_resolve_menu name='multi item' sort_results=True source=object_list.0 as links_multi_menus_results %}
+            {% navigation_resolve_menus names='list facet,object' source=object_list.0 as facet_menus_link_results %}
+
+            {% navigation_get_source_columns source=object_list only_identifier=True as source_column_identifier %}
+            {% navigation_get_source_columns source=object_list exclude_identifier=True as source_columns_non_identifier %}
+
             <div class="well center-block">
                 <div class="row row-items">
                     {% for object in object_list %}
@@ -34,8 +40,7 @@
                                                             {{ object }}
                                                         {% endif %}
                                                     {% else %}
-                                                        {% navigation_get_source_columns source=object only_identifier=True as source_column %}
-                                                        {% navigation_source_column_resolve column=source_column as column_value %}
+                                                        {% navigation_source_column_resolve column=source_column_identifier as column_value %}
                                                         {{ column_value }}
                                                     {% endif %}
                                                 </span>
@@ -45,8 +50,7 @@
                                 </div>
                                 <div class="panel-body">
                                     {% if not hide_columns %}
-                                        {% navigation_get_source_columns source=object exclude_identifier=True as source_columns %}
-                                        {% for column in source_columns %}
+                                        {% for column in source_columns_non_identifier %}
                                             <div class="text-center" style="">{% navigation_source_column_resolve column=column as column_value %}{% if column_value != '' %}{% if column.include_label %}<span class="source-column-label">{{ column.label }}</span>: {% endif %}{{ column_value }}{% endif %}</div>
                                         {% endfor %}
                                     {% endif %}
@@ -57,7 +61,6 @@
 
                                     {% if not hide_links %}
                                         <hr/>
-                                        {% navigation_resolve_menus names='list facet,object' source=object as facet_menus_link_results %}
                                         {% if facet_menus_link_results %}
                                             {% with facet_menus_link_results as action_menus_link_results %}
                                                 <div class="dropdown text-center">
