Dashboard app updates:
- Extend dashboard widget interfaces.
- Add list dashboard widget.
- Move dashboard CSS from the appearance app to the dashboards
  app.
- Add user dashboard and made it the default.
- Add recently created, accessed, favorite documents dashboard
  widgets.
- Add user events dashboard widget.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/dashboards/templates/dashboards/numeric_widget.html
+++ b/mayan/apps/dashboards/templates/dashboards/numeric_widget.html
@@ -3,12 +3,12 @@
 {% load appearance_tags %}
 
 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 match-height">
-    <div class="panel panel-secondary dashboard-widget">
+    <div class="panel panel-secondary dashboards-panel-widget">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-xs-2">
                     {% if icon %}
-                        <div class="dashboard-widget-icon">
+                        <div class="dashboards-panel-widget-icon">
                             {% appearance_icon_render icon enable_shadow=True %}
                         </div>
                     {% endif %}
