--- a/mayan/apps/appearance/static/appearance/css/base.css
+++ b/mayan/apps/appearance/static/appearance/css/base.css
@@ -462,7 +462,7 @@ a i {
 #main-menu-button-open {
     background-color: transparent;
     border: 0;
-    border-right: 1px solid #95a5a6;
+    border-right: 1px solid #474c4d;
     display: block;
     padding: 6px 20px 0px 10px;
     margin: 0 10px 0 -15px;
