Change the title of the home view
Chaned from "Dashboard" to "Home".

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/home.html
+++ b/mayan/apps/appearance/templates/appearance/home.html
@@ -7,7 +7,7 @@
 {% load dashboards_tags %}
 {% load navigation_tags %}
 
-{% block title %}{% trans 'Dashboard' %}{% endblock %}
+{% block title %}{% include 'appearance/calculate_form_title.html' with non_html_title=True %}{% endblock %}
 
 {% block javascript %}
     <script>
