Dashboard app updates
- Add dashboard list and detail views.
- Add setting to select the default dashboard.
- Add template tag to display the default dashboard in the home
  view.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/dashboards/templates/dashboards/dashboard.html
+++ b/mayan/apps/dashboards/templates/dashboards/dashboard.html
@@ -1,5 +1,14 @@
-<div class="row">
-    {% for widget in widgets %}
-        {{ widget }}
-    {% endfor %}
+{% if not dashboard_skip_label %}
+    <h4>
+        {{ dashboard.label }}
+    </h4>
+    <hr>
+{% endif %}
+
+<div class="well">
+    <div class="row">
+        {% for widget in widgets %}
+            {{ widget }}
+        {% endfor %}
+    </div>
 </div>
