--- a/mayan/apps/appearance/templates/appearance/home.html
+++ b/mayan/apps/appearance/templates/appearance/home.html
@@ -44,6 +44,6 @@
 
     {% include 'dynamic_search/search_box.html' %}
 
-    {% dashboards_render_dashboard 'user' %}
+    {% dashboards_render_default_dashboard %}
 
 {% endblock %}
