Changed the background color of the action button

--- a/mayan/apps/navigation/templates/navigation/actions_dropdown.html
+++ b/mayan/apps/navigation/templates/navigation/actions_dropdown.html
@@ -2,7 +2,7 @@
 
 {% load common_tags %}
 
-<button aria-expanded="false" aria-haspopup="true" class="{{ action_dropdown_classes|default:"btn btn-default btn-danger"}} btn-sm dropdown-toggle" data-toggle="dropdown" type="button">
+<button  style = "background-color:black;" aria-expanded="false" aria-haspopup="true" class="{{ action_dropdown_classes|default:"btn btn-default btn-danger"}} btn-sm dropdown-toggle" data-toggle="dropdown" type="button">
     {% if action_dropdown_label %}
         {{ action_dropdown_label }}
     {% else %}
