--- a/mayan/apps/navigation/templates/navigation/actions_dropdown.html
+++ b/mayan/apps/navigation/templates/navigation/actions_dropdown.html
@@ -2,11 +2,11 @@
 
 {% load common_tags %}
 
-<button  style = "background-color:black;" aria-expanded="false" aria-haspopup="true" class="{{ action_dropdown_classes|default:"btn btn-default btn-danger"}} btn-sm dropdown-toggle" data-toggle="dropdown" type="button">
+<button  style = "background-color:#1B1A1A;" aria-expanded="false" aria-haspopup="true" class="{{ action_dropdown_classes|default:"btn btn-default btn-danger"}} btn-sm dropdown-toggle" data-toggle="dropdown" type="button">
     {% if action_dropdown_label %}
         {{ action_dropdown_label }}
     {% else %}
-        {% trans 'Actions' %}
+        {% trans 'Actions' %}git checkout -b new-feature
     {% endif %}
     <span class="caret"></span>
     <span class="sr-only">{% trans 'Toggle Dropdown' %}</span>
