Revert "updating button to be darker for accessibility"
This reverts commit 6f2295d45fc1dd03d5af9dda6d6efbedb8fbed30.

--- a/mayan/apps/appearance/templates/appearance/generic_form_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_form_subtemplate.html
@@ -89,7 +89,7 @@
                     {% endif %}
 
                     {% for button in extra_buttons %}
-                        <button class="btn btn-default" style="color:#000000" name="{% if form.prefix %}{{ form.prefix }}-{{ button.name }}{% else %}{{ button.name }}{% endif %}" type="submit">
+                        <button class="btn btn-default" name="{% if form.prefix %}{{ form.prefix }}-{{ button.name }}{% else %}{{ button.name }}{% endif %}" type="submit">
                             {% if button.icon %}
                                 {{ button.icon.render }}
                             {% endif %}
