Multi factor login MVP
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/authentication/templates/authentication/login.html
+++ b/mayan/apps/authentication/templates/authentication/login.html
@@ -24,12 +24,34 @@
                     <div class="content login">
                         <form action="." method="post" class="form login">{% csrf_token %}
                             <div class="group wat-cf">
-                                {% include 'appearance/generic_form_instance.html' %}
+                                {{ wizard.management_form }}
+
+                                {% if wizard.form.forms %}
+                                    {{ wizard.form.management_form }}
+
+                                    {% with wizard.form as form %}
+                                    {% with 'true' as form_display_mode_table %}
+                                        {% include 'appearance/generic_form_instance.html' %}
+                                    {% endwith %}
+                                    {% endwith %}
+                                {% else %}
+                                    {% if wizard.form %}
+                                        {% with wizard.form as form %}
+                                            {% include 'appearance/generic_form_instance.html' %}
+                                        {% endwith %}
+                                    {% else %}
+                                        {% include 'appearance/generic_form_instance.html' %}
+                                    {% endif %}
+                                {% endif %}
+
                                 <input type="hidden" name="next" value="{{ next|escape }}" />
-                            <div class="form-group">
-                                <button class="btn btn-primary" name="{% if form.prefix %}{{ form.prefix }}-submit{% else %}submit{% endif %}" type="submit"><i class="fa fa-sign-in-alt"></i> {% trans 'Sign in' %}</button>
+
+                                <div class="form-group">
+                                    <button class="btn btn-primary" name="{% if form.prefix %}{{ form.prefix }}-submit{% else %}submit{% endif %}" type="submit"><i class="fa fa-sign-in-alt"></i> {% trans 'Sign in' %}</button>
+                                </div>
                             </div>
                         </form>
+
                         {% smart_setting global_name="AUTHENTICATION_DISABLE_PASSWORD_RESET" as setting_disable_password_reset %}
                         {% if not setting_disable_password_reset %}
                             <hr>
