--- a/mayan/apps/authentication/templates/authentication/login.html
+++ b/mayan/apps/authentication/templates/authentication/login.html
@@ -22,7 +22,8 @@
                 </div>
                 <div class="panel-body">
                     <div class="content login">
-                        <form action="." method="post" class="form login">{% csrf_token %}
+                        <form action="." method="post" class="form login">
+                            {% csrf_token %}
                             <div class="group wat-cf">
                                 {{ wizard.management_form }}
 
@@ -47,7 +48,14 @@
                                 <input type="hidden" name="next" value="{{ next|escape }}" />
 
                                 <div class="form-group">
-                                    <button class="btn btn-primary" name="{% if form.prefix %}{{ form.prefix }}-submit{% else %}submit{% endif %}" type="submit"><i class="fa fa-sign-in-alt"></i> {% trans 'Sign in' %}</button>
+                                    <button class="btn btn-primary btn-hotkey-default" name="{% if form.prefix %}{{ form.prefix }}-submit{% else %}submit{% endif %}" type="submit">
+                                        {% if submit_icon %}
+                                            {{ submit_icon.render }}
+                                        {% else %}
+                                            <i class="fa fa-check"></i>
+                                        {% endif %}
+                                        {% if submit_label %}{{ submit_label }}{% else %}{% if form.instance %}{% trans 'Save' %}{% else %}{% trans 'Submit' %}{% endif %}{% endif %}
+                                    </button>
                                 </div>
                             </div>
                         </form>
