--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -106,19 +106,20 @@
         </script>
         <script src="{% static 'appearance/js/base.js' %}" type="text/javascript"></script>
         <script>
+            {% smart_setting "APPEARANCE_MENU_POLLING_INTERVAL" as menu_polling_interval %}
             const app = new MayanApp({
                 ajaxMenusOptions: [
                     {
                         callback: function (options) {
                             MayanApp.updateNavbarState();
                         },
-                        interval: 5000,
+                        interval: {% if menu_polling_interval == 'None' %}null{% else %}{{ menu_polling_interval }}{% endif %},
                         menuSelector: '#menu-main',
                         name: 'menu_main',
                         url: '{% url "rest_api:template-detail" "menu_main" %}'
                     },
                     {
-                        interval: 5000,
+                        interval: {% if menu_polling_interval == 'None' %}null{% else %}{{ menu_polling_interval }}{% endif %},
                         menuSelector: '#menu-topbar',
                         name: 'menu_topbar',
                         url: '{% url "rest_api:template-detail" "menu_topbar" %}'
