Move the default dashboard code to the common app
Remove the concept of a default dashboard and instead
allow the common app to specify which dashboard to
display.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/home.html
+++ b/mayan/apps/appearance/templates/appearance/home.html
@@ -6,6 +6,7 @@
 {% load common_tags %}
 {% load dashboards_tags %}
 {% load navigation_tags %}
+{% load smart_settings_tags %}
 
 {% block title %}{% include 'appearance/calculate_form_title.html' with non_html_title=True %}{% endblock %}
 
@@ -44,6 +45,7 @@
 
     {% include 'dynamic_search/search_box.html' %}
 
-    {% dashboards_render_default_dashboard %}
+    {% smart_setting "COMMON_HOME_VIEW_DASHBOARD_NAME" as home_view_dashboard_name %}
 
+    {% dashboards_render_dashboard name=home_view_dashboard_name %}
 {% endblock %}
