Move `no_results` template to partials folder
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/generic_list_horizontal.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_horizontal.html
@@ -17,7 +17,7 @@
                     {% endwith %}
                 {% empty %}
                     <p class="text-center">
-                        {% include 'appearance/no_results.html' %}
+                        {% include 'appearance/partials/partials/no_results.html' %}
                     </p>
                 {% endfor %}
             {% endwith %}
