Move the `list_toolbar` template to partials
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/partials/list_header.html
+++ b/mayan/apps/appearance/templates/appearance/partials/list_header.html
@@ -25,5 +25,5 @@
 {% endif %}
 
 <div class="clearfix">
-    {% include 'appearance/list_toolbar.html' %}
+    {% include 'appearance/partials/list_toolbar.html' %}
 </div>
