Move menu templates to the `menu` folder
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -35,10 +35,10 @@
             {% block content_plain %}{% endblock %}
         {% else %}
             <div id="menu-topbar">
-                {% include 'appearance/menu_topbar.html' %}
+                {% include 'appearance/menus/menu_topbar.html' %}
             </div>
             <div id="menu-main">
-                {% include 'appearance/menu_main.html' %}
+                {% include 'appearance/menus/menu_main.html' %}
             </div>
             <div id="appearance-main-viewport">
                 <div class="row zero-margin">
