--- a/mayan/apps/appearance/templates/appearance/base.html
+++ b/mayan/apps/appearance/templates/appearance/base.html
@@ -31,9 +31,9 @@
     {% block content_plain %}{% endblock %}
 {% else %}
     <div class="">
-        {% navigation_resolve_menus names='facet,list facet,related,return,sources' sort_results=True as facet_menus_link_results %}
+        {% navigation_resolve_menus names='facet,list facet,related,return,sources' sort_results=True as sidebar_menus_link_results %}
         <div class="row zero-margin">
-            <div class="col-xs-12 {% if facet_menus_link_results %}has-sidebar{% endif %}" id="viewport">
+            <div class="col-xs-12 {% if sidebar_menus_link_results %}has-sidebar{% endif %}" id="viewport">
                 <div class="row zero-margin">
                     <div class="col-xs-12">
                         {% block messages %}
@@ -58,18 +58,20 @@
                 {% block footer %}{% endblock %}
             </div>
 
-            {% if facet_menus_link_results %}
+            {% if sidebar_menus_link_results %}
                 <div id="sidebar">
                     <div class="list-group">
-                        {% for menu_link_result in facet_menus_link_results %}
+                        {% for menu_link_result in sidebar_menus_link_results %}
                             {% for link_group in menu_link_result.link_groups %}
-                                {% if menu_link_result.menu.name not in 'facet,list facet'|split:"," %}
-                                    <li class="dropdown-header">{{ menu_link_result.menu.label }}</li>
-                                {% else %}
-                                    {% ifchanged link_group.object %}
-                                        {% common_get_object_verbose_name obj=link_group.object as link_group_object_verbose_name %}
-                                        <li class="dropdown-header">{% if link_group_object_verbose_name %}{{ link_group_object_verbose_name }}{% else %}{% trans 'Object' %}{% endif %}</li>
-                                    {% endifchanged %}
+                                {% if sidebar_menus_link_results|length > 1 %}
+                                    {% if menu_link_result.menu.name not in 'facet,list facet'|split:"," %}
+                                        <li class="dropdown-header">{{ menu_link_result.menu.label }}</li>
+                                    {% else %}
+                                        {% ifchanged link_group.object %}
+                                            {% common_get_object_verbose_name obj=link_group.object as link_group_object_verbose_name %}
+                                            <li class="dropdown-header">{% if link_group_object_verbose_name %}{{ link_group_object_verbose_name }}{% else %}{% trans 'Object' %}{% endif %}</li>
+                                        {% endifchanged %}
+                                    {% endif %}
                                 {% endif %}
 
                                 {% with link_group.links as object_navigation_links %}
